--- a/jvm-packages/xgboost4j/pom.xml
+++ b/jvm-packages/xgboost4j/pom.xml
@@ -62,10 +62,16 @@
                           <goal>exec</goal>
                       </goals>
                       <configuration>
-                          <executable>python</executable>
+                          <executable>python2.7</executable>
                           <arguments>
                             <argument>create_jni.py</argument>
                           </arguments>
+						  
+                          <environmentVariables>
+                            <JAVA_HOME>${env.JAVA_HOME}</JAVA_HOME>
+                            <PATH>${env.PATH}</PATH>
+                          </environmentVariables>
+						  
                           <workingDirectory>${user.dir}</workingDirectory>
                       </configuration>
                   </execution>
