--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "dmlc-core"]
 	path = dmlc-core
-	url = https://github.com/dmlc/dmlc-core
+	url = https://github.com/clockfly/dmlc-core
 [submodule "rabit"]
 	path = rabit
 	url = https://github.com/dmlc/rabit
